--- a/npm-packages/mappings/package.json
+++ b/npm-packages/mappings/package.json
@@ -1,6 +1,32 @@
 {
     "name": "mappings",
     "version": "0.1.1",
+    "license": "MIT",
+    "author": "Christoph Dorn <christoph@christophdorn.com> (http://christophdorn.com)",
+    "maintainers": [
+        {
+            "name": "Christoph Dorn",
+            "email": "christoph@christophdorn.com",
+            "web": "http://christophdorn.com"
+        }
+    ],
+    "contributors": [
+        {
+            "name": "Christoph Dorn",
+            "email": "christoph@christophdorn.com",
+            "web": "http://christophdorn.com"
+        }
+    ],
+    "bugs": {
+        "email": "sourcemint@googlegroups.com",
+        "url": "https://github.com/sourcemint/pm-npm/issues"
+    },
+    "homepage": "https://github.com/sourcemint/pm-npm",
+    "repository": {
+        "type": "git",
+        "url": "https://github.com/sourcemint/pm-npm.git"
+    },
+    "pm": "npm",
     "engines": {
         "node": ">= 0.6.15"
     },
