--- a/npm-packages/mappings/package.json
+++ b/npm-packages/mappings/package.json
@@ -1,6 +1,7 @@
 {
     "name": "mappings",
-    "version": "0.1.2",
+    "description": "Sourcemint CommonJS Package Mappings Support",
+    "version": "0.1.3",
     "license": "MIT",
     "author": "Christoph Dorn <christoph@christophdorn.com> (http://christophdorn.com)",
     "maintainers": [
@@ -30,13 +31,5 @@
     "engines": {
         "node": ">= 0.6.15"
     },
-    "main": "./index.js",
-    "dependencies": {
-        "sourcemint-util-js": "0.1.x",
-        "sourcemint-pm-sm": "0.1.x"
-    },
-    "scripts": {
-        "postprograminstall": "node ./scripts/post-program-install.js",
-        "postprogramupdate": "node ./scripts/post-program-update.js"
-    }
+    "main": "./index.js"
 }
