--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "dependencies": {
         "sourcemint-pm-sm": "0.1.x",
         "sourcemint-pm-git": "0.1.x",
-        "semver": "1.x",
-        "npm": "1.1.x"
+        "semver": "1.x"
     }
 }
